--- a/Main.html
+++ b/Main.html
@@ -196,6 +196,7 @@
                 <button type="button"
                     onclick="openCreateCurrency()">Add
                     Currency</button>
+                <input id="currencySelect" disabled />
                 <table>
                     <thead>
                         <tr>
